# localmind

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
scripts/: diagnostics.py  index_repo.py
src/localmind/: cli.py
src/localmind/api/: __init__.py  analysis.py  app.py  chat.py  docs.py  embeddings.py  indexing.py  insights.py  review.py  runtime.py  saved_search.py  search.py  stats.py
src/localmind/core/: __init__.py  logging.py  middleware.py  settings.py
src/localmind/dashboard/: __init__.py  progress.py  routes.py
src/localmind/embeddings/: __init__.py  cache.py  encoder.py  pipeline.py  store.py
src/localmind/indexing/: __init__.py  database.py  doc_models.py  doc_service.py  docs.py  models.py  routes.py  scanner.py  snapshot.py  stats.py  store.py  symbols.py  task_queue.py  tasks.py
src/localmind/parsers/: __init__.py  analyzer.py  call_graph.py  import_graph.py  pr_analyzer.py  pr_models.py  python_ast.py
src/localmind/rag/: __init__.py  chunker.py  models.py  ollama.py  prompts.py  refactor.py  runtime.py  service.py
src/localmind/search/: __init__.py  duplicate_service.py  duplicates.py  engine.py  models.py  saved.py  saved_models.py
tests/: test_api_integration.py  test_call_graph.py  test_dashboard.py  test_docs.py  test_embeddings.py  test_health.py  test_indexing.py  test_insights.py  test_middleware.py  test_parsers.py  test_rag.py  test_review.py  test_runtime.py  test_saved_search.py  test_search.py  test_snapshot.py  test_stats.py  test_task_queue.py
(+3 files in other folders)
