[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localmind"
version = "0.1.0"
description = "Local-first AI codebase intelligence engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Moaz125-eng" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "networkx>=3.3",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "matplotlib>=3.9.0",
    "pygraphviz>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
localmind = "localmind.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["localmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
